--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "express": "^4.21.0",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^2.0.6",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.7.0",
-    "proxy-from-env": "0.0.1",
-    "morgan": "^1.10.0"
+    "proxy-from-env": "0.0.1"
   },
   "devDependencies": {
     "coveralls": "^2.11.6",
