--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "test-coverage": "istanbul cover ./node_modules/.bin/_mocha -- test/test.js test/test-ratelimit.js --reporter spec"
   },
   "dependencies": {
+    "axios": "^1.7.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
